[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "torchdrivesim"
authors = [
    {name = "Inverted AI Ltd.", email = "info@inverted.ai"},
]
description = "TorchDriveSim is a lightweight 2D driving simulator, built entirely in PyTorch, primarily intended as a training environment for developing autonomous driving algorithms"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["torch", "drive", "sim", "torch-drive-sim", "torchdrivesim", "invertedai", "inverted ai"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
    "numpy",
    "shapely",
    "scipy",
    "imageio",
    "torch @ https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp38-cp38-linux_x86_64.whl",
    "pytorch3d @ https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py38_cu113_pyt1110/pytorch3d-0.7.2-cp38-cp38-linux_x86_64.whl",
    "invertedai",
    "omegaconf"
]
dynamic = ["version",]

[project.optional-dependencies]
dev = ["gym"]
tests = ["pytest==5.4.3"]

[tool.setuptools.dynamic]
version = {attr = "torchdrivesim.__version__"}

[tool.setuptools.packages.find]
include = ["torchdrivesim*"]

